@@ -4,15 +4,22 @@ import jakarta.validation.ConstraintViolation;
 import jakarta.validation.Validation;
 import jakarta.validation.Validator;
 import jakarta.validation.ValidatorFactory;
+import org.instancio.Instancio;
+import org.instancio.Model;
+import org.instancio.junit.InstancioExtension;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.instancio.Instancio.gen;
+import static org.instancio.Select.field;
 
+@ExtendWith(InstancioExtension.class)
 class ReservationDTOTest {
 
     private Validator validator;
@@ -26,9 +33,22 @@ class ReservationDTOTest {
     @Test
     void should_fail_when_passengers_list_is_empty() {
         // Given
-        ReservationDTO reservation = new ReservationDTO();
-        reservation.setPassengers(Collections.emptyList());
-        reservation.setItinerary(new ItineraryDTO());
+        Model<SegmentDTO> segmentModel = Instancio.of(SegmentDTO.class)
+                .set(field(SegmentDTO::getOrigin), "NYC")
+                .set(field(SegmentDTO::getDestination), "LAX")
+                .set(field(SegmentDTO::getDeparture), "2024-07-01T10:00:00")
+                .set(field(SegmentDTO::getArrival), "2024-07-01T14:00:00")
+                .set(field(SegmentDTO::getCarrier), "AA")
+                .toModel();
+
+        ItineraryDTO itinerary = Instancio.of(ItineraryDTO.class)
+                .set(field(ItineraryDTO::getSegment), List.of(Instancio.create(segmentModel)))
+                .create();
+
+        ReservationDTO reservation = Instancio.of(ReservationDTO.class)
+                .set(field(ReservationDTO::getPassengers), Collections.emptyList()) // Set an empty list
+                .set(field(ReservationDTO::getItinerary), itinerary)
+                .create();
 
         // When
         Set<ConstraintViolation<ReservationDTO>> violations = validator.validate(reservation);
@@ -43,15 +63,30 @@ class ReservationDTOTest {
     @Test
     void should_pass_when_passengers_are_provided() {
         // Given
-        ReservationDTO reservation = new ReservationDTO();
-        PassengerDTO passenger = new PassengerDTO();
-        passenger.setFirstName("aasa");
-        passenger.setLastName("23");
-        passenger.setDocumentNumber("3434");
-        passenger.setDocumentType("223423");
-        reservation.setPassengers(List.of(passenger));
-        reservation.setItinerary(new ItineraryDTO());
+        Model<SegmentDTO> segmentModel = Instancio.of(SegmentDTO.class)
+                .set(field(SegmentDTO::getOrigin), "NYC")
+                .set(field(SegmentDTO::getDestination), "LAX")
+                .set(field(SegmentDTO::getDeparture), "2024-07-01T10:00:00")
+                .set(field(SegmentDTO::getArrival), "2024-07-01T14:00:00")
+                .set(field(SegmentDTO::getCarrier), "AA")
+                .toModel();
 
+        ItineraryDTO itinerary = Instancio.of(ItineraryDTO.class)
+                .set(field(ItineraryDTO::getSegment), List.of(Instancio.create(segmentModel)))
+                .create();
+
+        PassengerDTO passenger = Instancio.of(PassengerDTO.class)
+                .set(field(PassengerDTO::getFirstName), "John")
+                .set(field(PassengerDTO::getLastName), "Doe")
+                .set(field(PassengerDTO::getDocumentNumber), "12345678")
+                .set(field(PassengerDTO::getDocumentType), "Passport")
+                .set(field(PassengerDTO::getBirthday), gen().temporal().localDate().past().get())
+                .create();
+
+        ReservationDTO reservation = Instancio.of(ReservationDTO.class)
+                .set(field(ReservationDTO::getPassengers), List.of(passenger))
+                .set(field(ReservationDTO::getItinerary), itinerary)
+                .create();
         // When
         Set<ConstraintViolation<ReservationDTO>> violations = validator.validate(reservation);
 
@@ -63,7 +98,15 @@ class ReservationDTOTest {
     void should_fail_when_itinerary_is_null() {
         // Given
         ReservationDTO reservation = new ReservationDTO();
-        PassengerDTO passenger = new PassengerDTO();
+
+        PassengerDTO passenger = Instancio.of(PassengerDTO.class)
+                .set(field(PassengerDTO::getFirstName), "John")
+                .set(field(PassengerDTO::getLastName), "Doe")
+                .set(field(PassengerDTO::getDocumentNumber), "12345678")
+                .set(field(PassengerDTO::getDocumentType), "Passport")
+                .set(field(PassengerDTO::getBirthday), gen().temporal().localDate().past().get())
+                .create();
+
         reservation.setPassengers(List.of(passenger));
         reservation.setItinerary(null);
 
@@ -71,6 +114,6 @@ class ReservationDTOTest {
         Set<ConstraintViolation<ReservationDTO>> violations = validator.validate(reservation);
 
         // Then
-        assertThat(violations).hasSize(4);
+        assertThat(violations).hasSize(1);
     }
 }
